[package]
name = "mqtt5-r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "^0.23"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "^0.10"
log = { version = "^0.4", features = [] }
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
uuid = { version = "^1.6", features = ["v4"] }